--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <img src="assets/img/logo/logo.png" class="rounded-pill shadow" width="200" alt="">
                     <div class="text-intro d-block">
                         <h5 class="mt-3 fw-bold mb-0">SAKLAR GARAGE</h5>
-                        <span class="text">Your Creative Website Solution</span>
+                        <span class="text">Satu Vespa Berjuta Masalah</span>
                         <span class="d-block mt-3 mx-4">
                             Saklar Garage merupakan salah satu penyedia suku cadang Scooter Vespa terpercaya di kota Semarang.
                         </span>
