--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <!-- Footer Start -->
     <div class="container-fluid">
         <div class="fixed-bottom bg-dark text-center text-white shadow p-3">
-            <span>&copy; 2023 webixcloud.com | All Right Reserved</span>
+            <span>&copy; 2023 saklargarage.com | All Right Reserved</span>
         </div>
     </div>
     <!-- Footer End -->
